# python-flightplan

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  scratch.txt  setup.py  waypoint_extractor.py
deserialisers/: little_navmap.py
route_processor/: geo.py  route_processor.py
src/: __init__.py  cli.py  main.py
src/commands/: __init__.py  config.py  convert.py
src/deserialisers/: little_navmap.py
src/route_processor/: geo.py  performance_data.py  processor_config.py  route_processor.py  transit_planner.py  utils.py
src/route_processor/performance_data/: ll_cruise_performance.csv  ml_cruise_performance.csv  nav_descent_performance.csv  normal_climb_performance.csv
src/utils/: waypoint_extractor.py
tests/data/: VFR Newcastle (EGNT) to Inverness (EGPE).lnmpln  VFR Valley (EGOV) to Leeming (EGXE).pln
tests/deserialisers/: test_little_navmap.py
tests/route_processor/: conftest.py  test_geo.py  test_performance_data.py  test_route_processor.py  test_transit_planner.py
