[project]
name = "flightplan"
version = "0.1.0"
description = "Military style low level navigation utility."
authors = [
    { name = "Richard Lyon", email = "richlyon@fastmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "pygeomag>=1.1.0",
    "setuptools>=75.8.0",
    "typer>=0.15.1",
    "xmltodict>=0.14.2",
]

[project.scripts]
flightplan = "src.main:app"

[tool.setuptools]
packages = ["src", "src.deserialisers", "src.route_processor", "src.utils"]

[tool.ruff]
format.quote-style = "double"
format.docstring-code-format = true


[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
