[project]
name = "flightplan"
version = "0.2.0"
description = "Military style low level navigation utility."
authors = [
    { name = "Richard Lyon", email = "richlyon@fastmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pygeomag>=1.1.0",
    "setuptools>=75.8.0",
    "toml>=0.10.2",
    "typer>=0.15.1",
    "xmltodict>=0.14.2",
]

[project.scripts]
flightplan = "src.cli:app"

[tool.setuptools]
packages = ["src", "src.deserialisers", "src.route_processor", "src.utils"]

[tool.ruff]
format.quote-style = "double"
format.docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
    "D", # pydocstyle
    "F", # Pyflakes
    #    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "C90", # mccabe complexity
    "I", # isort
    "N", # pep8-naming
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
